[TEST] Try Brave browser support, and found a issue with adblockers and the onFirstAction method

--- a/Resources/Static/settingsmodal.html
+++ b/Resources/Static/settingsmodal.html
@@ -10,7 +10,7 @@
                         </div>
                     </div>
                     <div id="s-bl">
-                        <div id="cookie-wrapper" class="cookie-wrapper">
+                        <div id="cf-category-wrapper" class="cf-category-wrapper">
 
                         </div>
                     </div>
