[BUGFIX] add missing aria-level attribute
Should be a native heading, but I see why this path might have been chosen...

--- a/Resources/Static/settingsmodal.html
+++ b/Resources/Static/settingsmodal.html
@@ -4,7 +4,7 @@
             <div id="c-s-in">
                 <div id="s-inr" class="bns-t">
                     <div id="s-hdr">
-                        <div id="s-ttl" role="heading">Cookie Settings</div>
+                        <div id="s-ttl" role="heading" aria-level="2">Cookie Settings</div>
                         <div id="s-c-bnc">
                             <button type="button" id="s-c-bn" class="c-bn" aria-label=""></button>
                         </div>
